# test

./: .env.template  .gitignore  config.py  const.py  docker-compose.yml  main.py  pyproject.toml
api_v1/: __init__.py
api_v1/auth/: helper.py  utils.py
api_v1/clients/: crud.py  pydantic_schemas.py  views.py
api_v1/demo_auth/: demo_jwt_auth.py  validation.py
api_v1/s3/: s3_config.py  views.py
core/: config.py
core/models/: config.py  dbhelper.py  schemas.py
migration/: env.py
migration/versions/: 2025_03_11_2025-4867361d80c6_create_clients_table.py
